--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: flask run
+    command: flask run --host=0.0.0.0
     volumes:
       - .:/usr/src/app/
-    expose:
-      - 5000
+    ports:
+      - 5000:5000
     env_file:
       - ./.env
     depends_on:
@@ -19,8 +19,8 @@ services:
     image: postgres:13-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    expose:
-      - 5432
+    ports:
+      - 5432:5432
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
