--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -3,6 +3,7 @@ Flask==2.0.2
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
 marshmallow-sqlalchemy==0.26.1
 psycopg2-binary 
 pylint==2.11.1
