--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
 greenlet==1.1.2
 iniconfig==1.1.1
 isort==5.10.1
