Change Dockerfile from multistage build to sigle stage Change application Dockerfile from multistage build to single stage Modify .gitignore Update requirements.dev.txt file with new requirements Change Makefile commands names, add new commands

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,10 @@
 .venv
 .vscode
 .git
-/**/__pycache__
+**/__pycache__
 .gitignore
 docker-compose.yml
 Dockerfile
 Makefile
 migrations
-requirements.txt
 .dockerignore
