--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,3 +1,5 @@
+aiohttp==3.8.1
+beautifulsoup4==4.10.0
 black==21.10b0
 Flask==2.0.2
 Flask-Login==0.5.0
@@ -5,7 +7,9 @@ Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 marshmallow-sqlalchemy==0.26.1
+lxml==4.6.4
 psycopg2-binary 
 pylint==2.11.1
 pytest==6.2.5
 python-dotenv==0.19.1
+requests==2.26.0
