--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile
     command: flask run --host=0.0.0.0
     volumes:
       - .:/usr/src/app/
@@ -21,10 +20,8 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     ports:
       - 5432:5432
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+    env_file:
+      - ./.env
     container_name: flask_db
 
 volumes:
