Create testing setup Create tests directory Setup conftest file with testing fixtures Write app config tests Write a couple sample tests Pre-commit code style fixes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,7 @@ repos:
           - faker
           - wtforms
           - flask_wtf
+          - pytest
       - id: pylint
         name: "Pylint SQLAlchemy module"
         files: "models.py"
