--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,16 @@
-alembic==1.7.4
-aniso8601==9.0.1
-astroid==2.8.4
-attrs==21.2.0
-backcall==0.2.0
+aiohttp==3.8.1
+beautifulsoup4==4.10.0
 black==21.10b0
-click==8.0.3
-decorator==5.1.0
+Faker==9.8.1
 Flask==2.0.2
-flask-marshmallow==0.14.0
+Flask-Login==0.5.0
 Flask-Migrate==3.1.0
-Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.0
-greenlet==1.1.2
-iniconfig==1.1.1
-isort==5.10.1
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.2
-lazy-object-proxy==1.6.0
-Mako==1.1.5
-MarkupSafe==2.0.1
-marshmallow==3.14.0
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-mypy-extensions==0.4.3
-packaging==21.2
-parso==0.8.2
-pathspec==0.9.0
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==2.4.0
-pluggy==1.0.0
-prompt-toolkit==3.0.22
+pre-commit==2.15.0
 psycopg2==2.9.1
-ptyprocess==0.7.0
-py==1.11.0
-Pygments==2.10.0
 pylint==2.11.1
-pyparsing==2.4.7
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
 pytest==6.2.5
 python-dotenv==0.19.1
-pytz==2021.3
-regex==2021.11.2
-six==1.16.0
-SQLAlchemy==1.4.26
-toml==0.10.2
-tomli==1.2.2
-traitlets==5.1.1
-typing-extensions==3.10.0.2
-wcwidth==0.2.5
-Werkzeug==2.0.2
-wrapt==1.13.3
+requests==2.26.0
