--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
           - pytest
       - id: pylint
         name: "Pylint SQLAlchemy module"
-        files: "^models.py"
+        files: "models.py"
         args: ["--load-plugins", "pylint_flask_sqlalchemy"]
         additional_dependencies:
           - pylint-flask-sqlalchemy
