--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,12 +1,20 @@
 aiohttp==3.8.1
 beautifulsoup4==4.10.0
+black==21.10b0
 Faker==9.8.1
-Flask==2.0.2
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
+Flask==2.0.2
 lxml==4.6.4
+pre-commit==2.15.0
 psycopg2-binary
+pylint-flask-sqlalchemy==0.2.0
+pylint-flask==0.6
+pylint==2.11.1
+pytest==6.2.5
 python-dotenv==0.19.1
+python-dotenv==0.19.1
+requests==2.26.0
 requests==2.26.0
