--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==2.0.2
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
 pre-commit==2.15.0
 psycopg2==2.9.1
 pylint==2.11.1
