Add site file parser exceptions counter Add exceptions catcher and counter to parser module Add flash messages on parse link errors with total error count Format urls list to set to ommit skip duplicate urls Add delete_file route to be able to delete user uploaded files Add managers module for db operations on models Took out parsing statistics table to sepatare html file Minor templates enchantments

--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -15,6 +15,5 @@ pylint-flask==0.6
 pylint==2.11.1
 pytest==6.2.5
 python-dotenv==0.19.1
-python-dotenv==0.19.1
-requests==2.26.0
+aiohttp-retry==2.4.6
 requests==2.26.0
