--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,21 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+      - id: check-docstring-first
+      - id: detect-private-key
+      - id: name-tests-test
+        exclude: "fixtures.py"
+      - id: requirements-txt-fixer
   - repo: https://github.com/pycqa/pylint
     rev: v2.11.1
     hooks:
       - id: pylint
-        name: "Pylint codebase."
+        name: "Pylint"
+  - repo: local
+    hooks:
+      - id: pytest-check
+        name: Pytest
+        entry: pytest
+        language: system
+        pass_filenames: false
+        always_run: true
