Change prject structure, add main Blueprint Move application files to a separate folder Add main app Blueprint Add 'dns' to web docker-compose service Fix parser request headers Add parser.fetch custom exception logging Add 'backoff' lib for request retries on exceptions Refactor codebase according to the registered Blueprint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - .:/usr/src/app/
     ports:
       - 5000:5000
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     env_file:
       - ./.env
     depends_on:
@@ -23,6 +26,7 @@ services:
     env_file:
       - ./.env
     container_name: flask_db
+
 
 volumes:
   postgres_data:
